--- a/github-tracker/package.json
+++ b/github-tracker/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "expo": "^23.0.0",
+    "prop-types": "^15.6.0",
     "react": "16.0.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-23.0.0.tar.gz",
     "react-native-easy-toast": "^1.0.9",
