--- a/github-tracker/package.json
+++ b/github-tracker/package.json
@@ -6,6 +6,7 @@
     "prop-types": "^15.6.0",
     "react": "16.0.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-23.0.0.tar.gz",
+    "react-native-check-box": "^2.0.2",
     "react-native-easy-toast": "^1.0.9",
     "react-native-scrollable-tab-view": "^0.8.0",
     "react-native-tab-navigator": "^0.3.4",
