--- a/github-tracker/package.json
+++ b/github-tracker/package.json
@@ -2,6 +2,7 @@
   "main": "node_modules/expo/AppEntry.js",
   "private": true,
   "dependencies": {
+    "GitHubTrending": "^3.0.0",
     "expo": "^23.0.0",
     "prop-types": "^15.6.0",
     "react": "16.0.0",
