adding favorite module

--- a/github-tracker/package.json
+++ b/github-tracker/package.json
@@ -9,6 +9,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-23.0.0.tar.gz",
     "react-native-check-box": "^2.0.2",
     "react-native-easy-toast": "^1.0.9",
+    "react-native-htmlview": "^0.12.1",
     "react-native-scrollable-tab-view": "^0.8.0",
     "react-native-sortable-listview": "^0.2.6",
     "react-native-tab-navigator": "^0.3.4",
