--- a/crypto-data-viz/package.json
+++ b/crypto-data-viz/package.json
@@ -13,6 +13,7 @@
     "lodash.takeright": "^4.1.1",
     "react": "16.0.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-24.0.0.tar.gz",
+    "react-native-highcharts": "^1.0.2",
     "react-native-linear-gradient": "^2.4.0",
     "react-native-svg": "^6.0.1-rc.1",
     "react-native-vector-icons": "^4.4.3",
