--- a/stock/package.json
+++ b/stock/package.json
@@ -9,6 +9,8 @@
     "react": "16.0.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-24.0.0.tar.gz",
     "react-native-elements": "^0.18.5",
+    "react-native-modal": "^4.1.1",
+    "react-native-progress": "^3.4.0",
     "react-navigation": "^1.0.0-beta.23",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
